Fixes AVL-tree for comparisons != EQUAL